# seq42

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  NO_JACK_OR_LASH.txt  README  README.md  SEQ42  TODO  aclocal.m4  configure  configure.ac  configure.in  notes_testing.txt  seq42usr.example  swing-ideas.txt
arch/: PKGBUILD
arch/package/: PKGBUILD
autom4te.cache/: output.0  requests  traces.0  traces.1
icons/: CMakeLists.txt  Makefile.am  seq42.desktop
man/: CMakeLists.txt  Makefile.am  Makefile.in  seq42.1
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h  config.h.in  configdefault.h  configfile.cpp  configfile.h  configwin32.h  controllers.h  event.cpp  event.h  font.cpp  font.h  globals.h  keybindentry.cpp  keybindentry.h  lash.cpp  lash.h  lfownd.cpp  lfownd.h  maintime.cpp  maintime.h  mainwnd.cpp  mainwnd.h  midibus.cpp  midibus.h  midibus_portmidi.cpp  midibus_portmidi.h  midifile.cpp  midifile.h  mutex.cpp  mutex.h  nsm.h  options.cpp  options.h  optionsfile.cpp  optionsfile.h  perfnames.cpp  perfnames.h  (+45 more)
src/pixmaps/: Makefile.am  Makefile.in  chord.xpm  create.xpm  end.xpm  exp_rec.xpm  fastforward.xpm  font_black.xpm  font_white.xpm  jack.xpm  mark_left.xpm  mark_right.xpm  resize_black.xpm  resize_white.xpm  rewind.xpm  seq42.xpm  seq42_playlist.xpm  seqlist.xpm  stop_marker.xpm  tempo_marker.xpm  track_mute.xpm  track_play.xpm  track_solo.xpm  transportFollow.xpm  transpose.xpm
