# Makefile.am for seq42

EXTRA_DIST = \
	bus.xpm \
	collapse.xpm \
	copy.xpm \
	down.xpm \
	expand.xpm \
	font_b.xpm \
	font_w.xpm \
	jack.xpm\
	key.xpm \
	learn2.xpm \
	learn.xpm \
	length.xpm \
	loop.xpm \
	menu_empty.xpm \
	menu_full.xpm \
	midi.xpm \
	note_length.xpm \
	perfedit.xpm \
	play2.xpm \
	play.xpm \
	q_rec.xpm \
	quanize.xpm \
	rec.xpm \
	redo.xpm \
	scale.xpm \
	seq42_32.xpm \
	seq42.xpm \
	seq-editor.xpm \
	sequences.xpm \
	snap.xpm \
	song-editor.xpm \
	stop.xpm \
	thru.xpm \
	tools.xpm \
	undo.xpm \
	zoom.xpm
